Fixes input[color] popovers not showing

--- a/sprite-editor/design.css
+++ b/sprite-editor/design.css
@@ -45,6 +45,8 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #colors input {
+  position: absolute;
+  inset: 0;
   width: 100%;
   height: 100%;
   opacity: 0;
